--- a/backend/.env
+++ b/backend/.env
@@ -14,5 +14,5 @@ CLOUDINARY_API_KEY = 138332967326258
 CLOUDINARY_SECRET_KEY = QyZt3nPLCPAb4IKzD6Lddkhp5os
 
 # Razorpay Payment Integration
-RAZORPAY_KEY_ID = "------ Razorpay Key Id here ------"
-RAZORPAY_KEY_SECRET = "------ Razorpay Key Secret here ------"
+RAZORPAY_KEY_ID =rzp_live_cvFvanYqPbRwhN
+RAZORPAY_KEY_SECRET =tfWUL7AXfZ1XkQbwrLTFLji
