--- a/backend/.env
+++ b/backend/.env
@@ -6,12 +6,12 @@ ADMIN_EMAIL = "admin@example.com"
 ADMIN_PASSWORD = "greatstack123"
 
 # MongoDB Setup ( required )
-MONGODB_URI = mongodb+srv://vineshchavhan8185:vineshchavhan8185@cluster0.uuq1ldh.mongodb.net
+MONGODB_URI = 
 
 # Cloudinary Setup ( required )
-CLOUDINARY_NAME = dwse7xyiu
-CLOUDINARY_API_KEY = 138332967326258
-CLOUDINARY_SECRET_KEY = QyZt3nPLCPAb4IKzD6Lddkhp5os
+CLOUDINARY_NAME =
+CLOUDINARY_API_KEY =
+CLOUDINARY_SECRET_KEY = 
 
 # Razorpay Payment Integration
 RAZORPAY_KEY_ID =rzp_live_cvFvanYqPbRwhN
